# xmonad-xfce-plugin

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  meson.build  plugin.desktop.in  pyproject.toml
scripts/: run.py
src/: main.py  plugin.c  plugin.h  plugin.py  py_plugin.py
